--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -6,7 +6,7 @@
     "SIGNIN_SUBTITLE": "إبدأ جلستك",
     "SIGNUP": "حساب جديد"
   },
-  "Dashboa": {
+  "DASHBOARD": {
     "TITLE": "البيانات الرئيسية"
   },
   "ITEM_ANALYSIS": {
