--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -222,35 +222,32 @@
   "ALERT": {
     "POINTS_DISCOUNT": "أريد تطبيق مبلغ الخصم على هذه الدفعة. "
   },
-  "Validation": {
-    "InvalidEnglishName": "يجب ان تكون الاحرف انجليزية فقط واكثر من 3 واقل من 100",
-    "InvalidArabicName": "يجب ان تكون الاحرف العربية فقط واكثر من 3 واقل من 100",
-    "UserNameTaken": "اسم المستخدم هذا مستخدم بالفعل",
-    "EmailTaken": "البريد الالكترونى مستخدم بالفعل",
-    "DeleteConfirmation": "تأكيد الحذف",
-    "DeleteMessage": "هل أنت متأكد أنك تريد حذفه؟",
-    "DeleteSuccess": "تم الحذف بنجاح",
-    "DeleteError": "خطأ فى الحذف",
-    "AddSuccess": "تمت الإضافة بنجاح",
-    "AddError": "خطأ فى الإضافة",
-    "UpdateSuccess": "تم التحديث بنجاح",
-    "UpdateError": "خطأ فى التحديث",
-    "LoginSuccess": "تم تسجيل الدخول بنجاح",
-    "GetError": "خطأ فى جلب البيانات من الخادم",
-    "InternalServerError": "خطأ ف الخادم",
-    "PasswordMessage": "يجب ان تتكون كلمة المرور من 8 رموز على الاقل وتشتمل على رقم وحرف كبير وحرف صغير ",
-    "PasswordMismatchMessage": "كلمة السر الجديدة غير متطابقة",
-    "PasswordChangedSuccess": "تم تغيير كلمة المرور بنجاح",
-    "UpdatingUserErrorAfterChangePassword": "خطا ف تحديث البيانات بعد تغيير كلمة المرور",
-    "CurrentPasswordIncorrect": "Old Password Is Incorrect",
-    "ServerError": "Server Error",
-    "SuccessUploadingImage": "تم تحديث الصورة بنجاح",
-    "ErrorUploadingImage": "خطا ف تحديث الصورة",
-    "WrongUserOrPass": "اسم المستخدم او كلمة المرور غير صحيحة",
-    "InvalidOtp": "الرقم المتغير غير صحيح او منتهى",
-    "PhoneNumberOrEmailAlreadyExist": "رقم الهاتف او البريد الالكترونى مسجل من قبل",
-    "EmailAlreadyExist": "البريد الالكترونى موجود من قبل",
-    "PhoneNumberAlreadyExist": "رقم الهاتف موجود من قبل",
+  "VALIDATION": {
+    "LOGIN_SUCCESS":"تم تسجيل الدخول بنجاح",
+    "INVALID_ENGLISH_NAME": "يجب ان تكون الاحرف انجليزية فقط واكثر من 3 واقل من 100",
+    "INVALID_ARABIC_NAME": "يجب ان تكون الاحرف العربية فقط واكثر من 3 واقل من 100",
+    "USERNAME_TAKEN": "اسم المستخدم هذا مستخدم بالفعل",
+    "EMAIL_TAKEN": "البريد الالكترونى مستخدم بالفعل",
+    "DELETE_CONFIRMATION": "تأكيد الحذف",
+    "DELETE_MESSAGE": "هل أنت متأكد أنك تريد حذفه؟",
+    "DELETE_SUCCESS": "تم الحذف بنجاح",
+    "DELETE_ERROR": "خطأ فى الحذف",
+    "ADD_SUCCESS": "تمت الإضافة بنجاح",
+    "ADD_ERROR": "خطأ فى الإضافة",
+    "UPDATE_SUCCESS": "تم التحديث بنجاح",
+    "UPDATE_ERROR": "خطأ فى التحديث",
+    "GET_ERROR": "خطأ فى جلب البيانات من الخادم",
+    "INTERNAL_SERVER_ERROR": "خطأ ف الخادم",
+    "PASSWORD_STRENGTH": "يجب ان تتكون كلمة المرور من 8 رموز على الاقل وتشتمل على رقم وحرف كبير وحرف صغير ",
+    "PASSWORD_MISMATCH": "كلمة السر الجديدة غير متطابقة",
+    "PASSWORD_CHANGED_SUCCESS": "تم تغيير كلمة المرور بنجاح",
+    "SERVER_ERROR": "Server Error",
+    "UPLOAD_SUCCESS": "تم تحديث الصورة بنجاح",
+    "UPLOAD_ERROR": "خطا ف تحديث الصورة",
+    "WRONG_USER_OR_PASSWORD": "اسم المستخدم او كلمة المرور غير صحيحة",
+    "INVALID_OTP": "الرقم المتغير غير صحيح او منتهى",
+    "PHONE_EXIST": "رقم الهاتف مسجل من قبل",
+    "EMAIL_EXIST": "البريد الالكترونى موجود من قبل",
     "ACTION_MESSAGE": "هل أنت متأكد أنك تريد القيام بهذا الإجراء؟",
     "APPROVE_PRICE_CONFIRMATION": "تأكيد الموافقة على التسعيير"
   },
