--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -22,7 +22,7 @@
     "TOTAL_UNIT_PRICE": "Total Unit Price",
     "PROFIT_RATIO": "Profit Ratio",
     "PROFIT_RATIO_PER_UNIT": "Profit Ratio Per Unit",
-    "NET_AMOUNT":"Unit Price After Profit Ratio",
+    "NET_AMOUNT": "Unit Price After Profit Ratio",
     "FINAL_PRODUCT_PRICE": "Final Product Price",
     "POS": "POS System",
     "TOTAL_QUANTITY_PRICE": "Total Quantity Price",
@@ -207,7 +207,7 @@
     "VAT": "Vat (%)",
     "VAT_AMOUNT": "Vat Amount",
     "DELIVERY": "Total Delivery Cost",
-    "LOADING_AND_UNLOADING":"Total Loading And Unloading Cost",
+    "LOADING_AND_UNLOADING": "Total Loading And Unloading Cost",
     "PROFIT_RATIO_PERCENTAGE": "Profit Ratio Percentage (%)",
     "DELIVERY_AMOUNT": "Delivery Amount",
     "INVOICE_NUMBER": "Invoice Number",
@@ -263,35 +263,32 @@
   "ALERT": {
     "POINTS_DISCOUNT": "I want to apply the discount amount on this payment. "
   },
-  "Validation": {
-    "InvalidEnglishName": "Name Should Be English Characters Only And More Than 3 And Less Than 100",
-    "InvalidArabicName": "Name Should Be Arabic Characters Only And More Than 3 And Less Than 100",
-    "UserNameTaken": "User Name Already Taken",
-    "EmailTaken": "Email Already Taken",
-    "DeleteConfirmation": "Delete Confirmation",
-    "DeleteMessage": "Are you sure that you want to delete it?",
-    "DeleteSuccess": "Deleted Successfully",
-    "DeleteError": "Error In Deleting",
-    "AddSuccess": "Added Successfully",
-    "AddError": "Error In Adding",
-    "UpdateSuccess": "Updated Successfully",
-    "UpdateError": "Error In Updating",
-    "LoginSuccess": "Login Successfully",
-    "GetError": "Error getting Data From Server",
-    "InternalServerError": "Internal Server Error",
-    "PasswordMessage": "Password should have minimum 8 characters, at least 1 uppercase letter, 1 lowercase letter and 1 number",
-    "PasswordMismatchMessage": "New Password Value Is Not Matched",
-    "PasswordChangedSuccess": "Password Changed Successfully",
-    "UpdatingUserErrorAfterChangePassword": "Error Updating Info After Changing Password",
-    "CurrentPasswordIncorrect": "Old Password Is Incorrect",
-    "ServerError": "Server Error",
-    "SuccessUploadingImage": "Image Updated Successfully",
-    "ErrorUploadingImage": "Error Updating Image",
-    "WrongUserOrPass": "Wrong Username Or Password",
-    "InvalidOtp": "Invalid Or Expired Otp",
-    "PhoneNumberOrEmailAlreadyExist": "Phone Number Or Email Already Exist",
-    "EmailAlreadyExist": "Email Already Exist",
-    "PhoneNumberAlreadyExist": "Phone Number Already Exist",
+  "VALIDATION": {
+    "LOGIN_SUCCESS": "Login Success",
+    "INVALID_ENGLISH_NAME": "Name Should Be English Characters Only And More Than 3 And Less Than 100",
+    "INVALID_ARABIC_NAME": "Name Should Be Arabic Characters Only And More Than 3 And Less Than 100",
+    "USERNAME_TAKEN": "User Name Already Taken",
+    "EMAIL_TAKEN": "Email Already Taken",
+    "DELETE_CONFIRMATION": "Delete Confirmation",
+    "DELETE_MESSAGE": "Are you sure that you want to delete it?",
+    "DELETE_SUCCESS": "Deleted Successfully",
+    "DELETE_ERROR": "Error In Deleting",
+    "ADD_SUCCESS": "Added Successfully",
+    "ADD_ERROR": "Error In Adding",
+    "UPDATE_SUCCESS": "Updated Successfully",
+    "UPDATE_ERROR": "Error In Updating",
+    "GET_ERROR": "Error getting Data From Server",
+    "INTERNAL_SERVER_ERROR": "Internal Server Error",
+    "PASSWORD_STRENGTH": "Password should have minimum 8 characters, at least 1 uppercase letter, 1 lowercase letter and 1 number",
+    "PASSWORD_MISMATCH": "New Password Value Is Not Matched",
+    "PASSWORD_CHANGED_SUCCESS": "Password Changed Successfully",
+    "SERVER_ERROR": "Server Error",
+    "UPLOAD_SUCCESS": "Image Updated Successfully",
+    "UPLOAD_ERROR": "Error Updating Image",
+    "WRONG_USER_OR_PASSWORD": "Wrong Username Or Password",
+    "INVALID_OTP": "Invalid Or Expired Otp",
+    "PHONE_EXIST": "Phone Number  Already Exist",
+    "EMAIL_EXIST": "Email Already Exist",
     "ACTION_MESSAGE": "Are you sure that you want to this action?",
     "APPROVE_PRICE_CONFIRMATION": "Approve Price Confirmation"
   },
