finish showing pagination

--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -223,6 +223,8 @@
     "POINTS_DISCOUNT": "أريد تطبيق مبلغ الخصم على هذه الدفعة. "
   },
   "VALIDATION": {
+    "ARABIC_LETTERS":"مسموح فقط أحرف الغة العربية",
+    "ENGLISH_LETTERS":"مسموح فقط أحرف اللغة الانجليزية",
     "LOGIN_SUCCESS":"تم تسجيل الدخول بنجاح",
     "INVALID_ENGLISH_NAME": "يجب ان تكون الاحرف انجليزية فقط واكثر من 3 واقل من 100",
     "INVALID_ARABIC_NAME": "يجب ان تكون الاحرف العربية فقط واكثر من 3 واقل من 100",
