--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -10,6 +10,7 @@
     "TITLE": "البيانات الرئيسية"
   },
   "SAMPLES": {
+    "SAMPLES_MANAGEMENT": "إدارة العينات",
     "TITLE": "عينات",
     "ADD": "اضافة عينة",
     "EDIT": "تعديل عينة",
@@ -61,10 +62,11 @@
     }
   },
   "REPORTS": {
-    "TITLE": "بيانات التقارير"
+    "TITLE": "التقارير"
   },
   "TABLE": {},
   "FIELDS": {
+    "TEST": "إختبار",
     "EMAIL": "البريد الإلكترونى",
     "MOBILE": "رقم الجوال",
     "NAME": "الإسم",
